#
# Copyright (C) 2024  CismonX <admin@cismon.net>
#
# Copying and distribution of this file, with or without modification, are
# permitted in any medium without royalty, provided the copyright notice and
# this notice are preserved.  This file is offered as-is, without any warranty.
#

ACLOCAL_AMFLAGS = -I m4
SUBDIRS         = doc src tests

pkgconfig_DATA = bookmarkfs_util.pc
